foundations/flex/04-flex-information/style.css
body {
  font-family: 'Courier New', Courier, monospace;
  margin: 32px;
}

.plant-list {
  display:flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 52px;
}

.first-plant, .second-plant, .third-plant, .fourth-plant {
  display: flex;
  align-items: center;
  flex-direction: column;
  text-align: center;
}

img {
  width: 100px;
  height: 100px;
}

.title {
  font-size: 36px;
  font-weight: 900;
  display: flex;
  justify-content: center;
  align-items: center;
}



/* do not edit this footer */
.footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 52px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #eee;
}

